// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDictionaryInfo mapDictionaryInformation 1`] = `
Array [
  Object {
    "insDel": 100,
    "map": "aAbBcCdDeEfFgGhHiIjJkKlLmMnNoOpPqQrRsStTuUvVwWxXyYzZ",
    "replace": 100,
    "swap": 100,
  },
  Object {
    "map": "aA|bB|cC|dD|eE|fF|gG|hH|iI|jJ|kK|lL|mM|nN|oO|pP|qQ|rR|sS|tT|uU|vV|wW|xX|yY|zZ|Aa|Bb|Cc|Dd|Ee|Ff|Gg|Hh|Ii|Jj|Kk|Ll|Mm|Nn|Oo|Pp|Qq|Rr|Ss|Tt|Uu|Vv|Ww|Xx|Yy|Zz",
    "replace": 1,
  },
  Object {
    "map": "(^a)(^b)(^c)(^d)(^e)(^f)(^g)(^h)(^i)(^j)(^k)(^l)(^m)(^n)(^o)(^p)(^q)(^r)(^s)(^t)(^u)(^v)(^w)(^x)(^y)(^z)(^A)(^B)(^C)(^D)(^E)(^F)(^G)(^H)(^I)(^J)(^K)(^L)(^M)(^N)(^O)(^P)(^Q)(^R)(^S)(^T)(^U)(^V)(^W)(^X)(^Y)(^Z)",
    "penalty": 4,
    "replace": 96,
  },
  Object {
    "map": "̴̵̶̷̸̡̢̧̨̛̖̗̘̙̜̝̞̟̠̣̤̥̦̩̪̫̬̭̮̯̰̱̲̳̹̺̻̼̀́̂̃̄̅̆̇̈̉̊̋̌̍̎̏̐̑̒̓̔̽̾̿̀́̕̚",
    "replace": 1,
  },
]
`;

exports[`mapDictionaryInfo mapDictionaryInformation 2`] = `
Array [
  Object {
    "insDel": 100,
    "map": "aAbBcCdDeE",
    "replace": 100,
    "swap": 100,
  },
  Object {
    "map": "aA|bB|cC|dD|eE",
    "replace": 1,
  },
  Object {
    "map": "(^a)(^b)(^c)(^d)(^e)",
    "penalty": 4,
    "replace": 96,
  },
]
`;

exports[`mapDictionaryInfo mapDictionaryInformation 3`] = `
Array [
  Object {
    "insDel": 100,
    "map": "aAbBcCdDeE",
    "replace": 100,
    "swap": 100,
  },
  Object {
    "map": "aA|bB|cC|dD|eE|Aa|Bb|Cc|Dd|Ee",
    "replace": 1,
  },
  Object {
    "map": "(^a)(^b)(^c)(^d)(^e)(^A)(^B)(^C)(^D)(^E)",
    "penalty": 4,
    "replace": 96,
  },
  Object {
    "map": "́",
    "replace": 1,
  },
]
`;
